--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -3,22 +3,18 @@ name: Build homesite
 on:
   push:
     branches:
-      - master
+      - source
 
 jobs:
   deploy:
     runs-on: ubuntu-18.04
     steps:
       - uses: actions/checkout@v2
-        with:
-          submodules: true
-          fetch-depth: 0
 
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v2
         with:
           hugo-version: '0.72.0'
-          # extended: true
 
       - name: Build
         run: hugo --minify
@@ -26,6 +22,6 @@ jobs:
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
           publish_dir: ./public
           publish_branch: master
