--- a/config.toml
+++ b/config.toml
@@ -28,8 +28,7 @@ main = [
 	  {Name = "About me", URL = "/about"},
 	  {Name = "All Posts", URL = "/posts"},
 	  {Name = "Tags", URL = "/tags"},
-      {Name = "Series", URL = "/series"},
-	  {Name = "Feed", URL = "/index.xml"}
+      {Name = "Series", URL = "/series"}
   ]
 
 [taxonomies]
